--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,9 @@ dependencies {
 
     implementation group: 'com.google.inject', name: 'guice', version: '4.1.0'
 
-    testCompile('org.junit.jupiter:junit-jupiter-api:5.2.0')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    // Use JUnit test framework
+    testImplementation 'junit:junit:4.12'
 
     //testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile "org.mockito:mockito-core:+"
+    testCompile "org.mockito:mockito-core:2.7.22"
 }
