--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,15 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
+plugins {
+    id "org.flywaydb.flyway" version "5.0.7"
+}
 
+//flyway {
+//    url = 'jdbc:mysql://localhost:3306/employee_db?useSSL=false'
+//    user = 'root'
+//    password = 'root'
+//}
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
@@ -33,5 +41,7 @@ configurations {
 dependencies {
     runtime('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.flywaydb:flyway-core:5.0.7')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
